@@ -1,5 +1,6 @@
 // $Id$
 
+- #718414 pvhee, twistor: Mapper for email field.
 - #791316 B-Prod: fix messages are not properly displayed by Feeds data
   processor plugin.
 
